--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     
     <title>React App</title>
   </head>
-  <body style="margin: 0; background-color: black;">
+  <body style="margin: 0; background-color: #0F0F0F;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     
